# nonebot_plugin_what2eat

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: release-drafter.yml
nonebot_plugin_what2eat/: __init__.py  config.py  data_source.py  download.py  utils.py
nonebot_plugin_what2eat/resource/: data.json  drinking.json  drinking2.json  drinks.json  eating.json  greating.json  greetings.json
