[tool.poetry]
name = "nonebot_plugin_what2eat"
version = "0.3.3a2"
description = "Ask bot for what to eat today!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_what2eat"}]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0b3"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-apscheduler = "^0.1.3"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = true
