[tool.poetry]
name = "nonebot_plugin_what2eat"
version = "0.3.5a1"
description = "Ask bot for what to eat or what to drink!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_what2eat"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.3"
nonebot-plugin-apscheduler = "^0.2.0"
httpx = "^0.23.0"
aiofiles = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = true
