[tool.poetry]
name = "nonebot_plugin_what2eat"
version = "0.3.6"
description = "Ask bot for what to eat or what to drink!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MinatoAquaCrews/nonebot_plugin_what2eat"
repository = "https://github.com/MinatoAquaCrews/nonebot_plugin_what2eat"
documentation = "https://github.com/MinatoAquaCrews/nonebot_plugin_what2eat#readme"
keywords = ["nonebot2", "nonebot-plugin", "What2eat", "What2drink", "MinatoAquaCrews"]
packages = [{include = "nonebot_plugin_what2eat"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.3"
nonebot-plugin-apscheduler = "^0.2.0"
httpx = "^0.23.0"
aiofiles = "^0.8.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = false
secondary = false
